# opsi-deploy-client-agent

./: .flake8  .gitlab-ci.yml  README.md  opsi-deploy-client-agent  opsi-deploy-client-agent-old  opsi-dev-tool.yml  pyproject.toml  run-opsi-deploy-client-agent
opsideployclientagent/: __init__.py  __main__.py  common.py  posix.py  windows.py
tests/: test_addresses.py  test_opsideployclientagent.py
