[tool.poetry]
name = "opsi-deploy-client-agent"
version = "4.3.0.0"
description = "tool to deploy the opsi-client-agent on linux, windows and macOS clients"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
authors = ["uib GmbH <info@uib.de>"]
maintainers = ["uib GmbH <info@uib.de>"]
packages = [
	{ include = "opsideployclientagent" }
]

[[tool.poetry.source]]
name = "uib"
url = "https://pypi.uib.gmbh/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-opsi-common = ">=4.3,<4.4"
paramiko = "^2.9"
impacket = "^0.10"
smbprotocol = "^1.9"

[tool.poetry.scripts]
opsi-deploy-client-agent = "opsideployclientagent.__main__:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^7.0"
pyinstaller = "^5.1"
mypy = "^1.1"

[tool.black]
line-length = 140
target-version = ['py39', 'py310']
use-tabs = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.ruff]
line-length = 140

[tool.ruff.format]
indent-style = "tab"
