[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "opsi-deploy-client-agent"
version = "4.3.0.1"
description = "tool to deploy the opsi-client-agent on linux, windows and macOS clients"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
authors = [ "uib GmbH <info@uib.de>",]
maintainers = [ "uib GmbH <info@uib.de>",]
[[tool.poetry.packages]]
include = "opsideployclientagent"

[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.poetry.scripts]
opsi-deploy-client-agent = "opsideployclientagent.__main__:main"

[tool.ruff]
line-length = 140

[tool.ruff.format]
indent-style = "tab"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-opsi-common = ">=4.3,<4.4"
paramiko = "^3.4"
impacket = "^0.11"
smbprotocol = "^1.13"
gssapi = "^1.8"
pydantic-core = "^2.20"
annotated-types = "^0.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5"
pytest = "^8.2"
pyinstaller = "^6.9"
mypy = "^1.10"
